--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,39 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-    <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
+    <link rel="icon" href="<%= BASE_URL %>logo4.ico">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="anonymous">
+    <!-- PRELOADS -->
+    <link rel="preload" as="style"
+      href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons&display=swap"
+      crossorigin="anonymous">
+    <link rel="preload" as="style"
+      href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css?display=swap"
+      crossorigin="anonymous">
+  
+    <link rel="preload" as="style" href="https://cdn.jsdelivr.net/npm/mdbvue/lib/css/mdb.min.css?display=swap"
+      crossorigin="anonymous">
+  
+  
+    <!-- STYLESHEET -->
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons&display=swap"
+      crossorigin="anonymous">
+    <link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css?display=swap"
+      crossorigin="anonymous">
+  
+  
+  
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css?display=swap"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- MDB TRANSITIONS-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mdbvue/lib/css/mdb.min.css?display=swap"
+      crossorigin="anonymous">
+
+    <title>
+      ASISTENCIA | HRZ
+    </title>
   </head>
   <body>
     <noscript>
