--- a/public/index.html
+++ b/public/index.html
@@ -44,5 +44,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type="text/javascript" src="websdk/websdk.client.ui.min.js"></script>
   </body>
 </html>
