[ADD] validancion de no numeros en campos de nombres

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script type="text/javascript" src="websdk/websdk.client.ui.min.js"></script>
+    <script src="modules/websdk/index.js"></script>
   </body>
 </html>
